<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Corporate Addressbook</string>
	<string name="loginButton">Log In</string>
	<string name="contactPicture">Contact picture</string>
	<string name="EnterSearchTerm">Enter search term</string>
	<string name="unameLabel">User name</string>
	<string name="domainUnameHint">DOMAIN\\Username</string>
	<string name="passwordLabel">Password</string>
	<string name="passwordHint">Password</string>
	<string name="acceptAllSllText">Accept all SSL certificates</string>
	<string name="useSecureSslText">Use secure connection (SSL)</string>
	<string name="serverHint">mail.example.com</string>
	<string name="serverText">Server</string>
	<string name="serversText">Servers</string>
	<string name="serverName">Server name</string>
	<string name="enterServerName">Enter server name</string>
	<string name="searchDirectory">Search Corporate Addressbook</string>
	<string name="search">Search</string>
	<string name="icon">Icon</string>
	<string name="clearHistory">Clear Search History</string>
	<string name="saveAsContact">Save as Contact</string>
	<string name="startBySelectingSearch">Start by selecting Search</string>
	<string name="dummyContactName">John Smith</string>
	<string name="dummyRoleAndCompany">Consultant, BigBlue Inc.</string>
	<string name="phone">Phone</string>
	<string name="dummyPhoneNumber">+46 123 456 789</string>
	<string name="verticalDivider">Vertical Divider</string>
	<string name="actions">Actions</string>
	<string name="retrievingResults">Retrieving results</string>
	<string name="mobile">Mobile</string>
	<string name="office">Office</string>
	<string name="email">Email</string>
	<string name="location">Location</string>
	<string name="alias">Alias</string>
	<string name="call">Call</string>
	<string name="sendMessage">SMS</string>
	<string name="sendEmail">Email</string>
	<string name="copyToClipboard">Copy</string>
	<string name="valid_domain_and_username_error">Please provide a valid Domain and username</string>
	<string name="domain_and_username_format_error">Domain name and username must be in the format DOMAIN\\Username
	</string>
	<string name="invalid_username_error">Please provide a valid username</string>
	<string name="invalid_password_error">Please provide a valid password</string>
	<string name="invalid_exchange_url_error">Please provide a valid Exchange URL</string>
	<string name="please_check_settings">Error connecting to server. Please check your settings</string>
	<string name="validating_settings">Validating settings</string>
	<string name="authentication_failed_title">Authentication failed</string>
	<string name="authentication_failed_detail">Please check your credentials</string>
	<string name="connection_failed_title">Connection failed</string>
	<string name="connection_failed_detail">Connection to server failed with error code: %1$d</string>
	<string name="enable_debugging">Would you like to enable troubleshooting?</string>
	<string name="debugging_enabled_title">Troubleshooting enabled</string>
	<string name="debugging_enabled_detail">Troubleshooting is now enabled which means that a log is collected which you
		can send to the developers for analysis
	</string>
	<string name="pref_debugging_enabled_title">Troubleshooting mode</string>
	<string name="pref_debugging_enabled_detail">Collect logs that you can send to the developers</string>
	<string name="privacy_title">Privacy notes</string>
	<string name="privacy_details">The logs collected have been cleaned of any personal information such as server and
		user names and should not contain
		any sensitive information. We advise you, however, to review any text sent so that it doesn\'t contain any
		unwanted information.\n\nLogs sent for analysis
		will be viewed only by the developers and used solely to solve your problems and present a fix. All information
		will be treated with confidentiality.\n\n
		Do you wish to allow for logs to be sent?
	</string>
	<string name="general">General</string>
	<!--<string name="agree">I agree</string>-->
	<!--<string name="decline">I decline</string>-->
	<string name="error_detail">Error Detail:\n</string>
	<string name="send_email">Send email</string>
	<string name="send_sms_to">"Send SMS to "</string>
	<string name="call_">"Call "</string>
	<string name="edit_number_before_call">Edit number before call</string>
	<string name="select_a_contact_to_view_details">Select a contact to view details</string>
	<string name="settings">Settings</string>
	<string name="found_x_results_for_y">Found %1$d results for \'%2$s\'</string>
	<string name="last_search_produced_x_results">Last search produced %1$d results</string>
	<string name="showing_x_of_y_results_for_z">Showing %1$d of %2$d results for \'%3$s\'</string>
	<string name="clearSearch">Clear search</string>
	<string name="unable_to_find_matching_certificate">Unable to find a certificate matching the server.%1$s%1$sTry
		enabling the option \"%2$s\"
	</string>
	<string name="could_not_connect_to_server">Could not connect to server</string>
	<string name="show_settings">Show settings</string>
	<string name="undefined_result_please_try_again">Undefined result, please try again</string>
	<string name="could_not_find_sms_application">Sorry, could not find an application to send SMS</string>
	<string name="could_not_find_email_application">Sorry, could not find an application to send email</string>
	<string name="server_settings">Server settings</string>
	<string name="about_app">About Corporate Addressbook</string>
	<string name="send_mail">Send mail…</string>
	<string name="too_many_device_partnerships_title">Too many device partnerships</string>
	<string name="too_many_device_partnerships_detail">Delete partnerships on the server before proceeding.
		\nThis is normally done via Outlook Web Access or by contacting your administrator.
	</string>
	<string name="unhandled_error">%d: Unhandled error</string>
	<string name="unhandled_error_occured">An error occurred that Corporate Addressbook currently cannot handle.%n
		Would you like to send a report to the developers?
	</string>
	<string name="forbidden_by_server_title">Forbidden by server</string>
	<string name="forbidden_by_server_detail" formatted="false">Your device is not allowed to connect to the
		server.%nThis typically means that an administrator needs to allow your Device ID to connect.%n%nYour Device ID
		is:%n%1$s
	</string>
	<string name="invalid_server_title">Invalid server name</string>
	<string name="invalid_server_detail">Could not find the server, are you sure the name is right?</string>
	<string name="timeout_title">Connection timeout</string>
	<string name="timeout_detail">The connection timed out. This might be caused by an unreliable network or trying to
		access using the wrong method.\nPlease try again or check the option \'%1$s\' if it is currently unchecked.
	</string>
	<string name="retry">Retry</string>
	<string name="no_response_from_server">No response received from server</string>
	<string name="server_responded_x">Server responded %1$d</string>
	<string name="text_copied_to_clipboard">Text copied to clipboard</string>
	<string name="select_account">Select account</string>
	<string name="account">Account</string>
	<string name="accounts">Accounts</string>
	<string name="delete_account">Delete account</string>
	<string name="editingWarning">Once an account is set up, you cannot change server or user name. Please create a new
		account to change these settings.
	</string>
	<string name="next_search">Get more</string>
	<string name="edit_account">Edit account</string>
	<string name="firstname">First name</string>
	<string name="lastname">Last name</string>
	<string name="title">Title</string>
	<string name="company">Company</string>
	<string name="migratingSettings">Migrating settings...</string>
	<string name="confirmDelete">Are you sure you want to delete the account \'</string>
	<string name="cantFindApp">Can\'t find a suitable app</string>
	<string name="deviceIdCopied">Device ID copied to clipboard</string>
	<string name="notSet">[Not set]</string>
	<string name="contactAuthorsDetails">For praise, whining or help</string>
	<string name="contactAuthorsTitle">Contact the authors</string>
	<string name="crowdinDetails">Help us translate the app</string>
	<string name="crowdinTitle">Corporate Addressbook on Crowdin</string>
	<string name="links">Links</string>
	<string name="googlecodeDetails">Downloads, issue tracker and wiki</string>
	<string name="googlecodeTitle">Corporate Addressbook on Google Code</string>
	<string name="deviceId">Device ID</string>
	<string name="copyDeviceIdQuestion">Would you like to copy the Device ID to the clipboard?</string>
	<string name="version">Version</string>
	<string name="about">About</string>
	<string name="addAccount">Add account</string>
	<string name="maxNumberOfResults">Maximum number of results</string>
	<string name="contactPictures">Contact pictures</string>
	<string name="contactPicturesWarning">Showing contact pictures might slow down search</string>
	<string name="view">View</string>
	<string name="contactListHeadersTitle">List headers</string>
	<string name="contactListHeadersDetail">Shows alphabetical header in contact list</string>
	<string name="release_to_get_more">Release to get more</string>
	<string name="pull_to_get_more">Pull to get more</string>
	<string name="send_debug_email">Send debug email</string>
	<string name="close">Close</string>
	<string name="advanced">Advanced</string>
</resources>