<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:minHeight="48dp" >

    <TextView
        android:id="@+id/toptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/detailsDivider"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:gravity="center_vertical"
        android:text="@string/dummyPhoneNumber"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/bottomtext"
        style="@style/detailsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toptext"
        android:layout_alignRight="@+id/toptext"
        android:layout_below="@+id/toptext"
        android:ellipsize="marquee"
        android:paddingBottom="6dp"
        android:singleLine="true"
        android:text="@string/mobile"
        android:textAllCaps="true" />

    <ImageButton
        android:id="@+id/detailsMoreActions"
        style="@style/flatImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/bottomtext"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/actions"
        android:src="@drawable/ic_action_expand" />

    <ImageView
        android:id="@+id/detailsDivider"
        android:layout_width="1dip"
        android:layout_height="fill_parent"
        android:layout_alignBottom="@id/bottomtext"
        android:layout_alignLeft="@+id/detailsMoreActions"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="-8dp"
        android:layout_marginTop="4dp"
        android:clickable="false"
        android:contentDescription="@string/verticalDivider"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false"
        android:src="@drawable/vert_divider" />

    <net.vivekiyer.GAL.view.QuickActionView
        android:id="@+id/details_actions"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/bottomtext"
        android:visibility="gone"
        />

</RelativeLayout>